--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2651,7 +2651,11 @@ body {
     padding-top: 80px;
     padding-bottom: 90px;
     background-color: #3385FF;
-    background-image: url(../assets/img/landing/avatar_all.png);
+    background-image: url(../assets/img/landing/blog_resize.png);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
   .contact {
     background-image: url(../assets/img/landing/word_map.png);
